# python-phonebook-app

./: README.md  file.py  helper.py  main.py  pyproject.toml  search.py
database/: database.json
src/: __init__.py  manager.py
